# yolo-service-live

./: AGENTS.md  README.md  bootstrap_project_docs.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml
apps/web/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/api/: API_CONTRACT.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md  CPU_INFERENCE_STRATEGY.md
docs/compatibility/: COMPATIBILITY_MATRIX.md
docs/decisions/: ADR-0001-cpu-only-inference.md  ADR-0002-yolo-onnx-runtime.md  ADR-0003-non-docker-deployment.md  ADR-0004-redis-introduced-at-alpha.md  ADR-0005-small-agent-pr-strategy.md  ADR_TEMPLATE.md
docs/deployment/: NON_DOCKER_DEPLOYMENT.md
docs/ml/: MODEL_STRATEGY.md
docs/project/: AGENT_EXECUTION_PLAN.md  MVP_SPEC.md  PROJECT_BRIEF.md  ROADMAP_TO_RC1.md
docs/quality/: REVIEW_CHECKLIST.md
docs/security/: PRIVACY_AND_DATA_RETENTION.md  SECURITY_MODEL.md
services/api/: pyproject.toml
services/api/app/: main.py
services/api/app/api/: errors.py
services/api/app/api/routes/: __init__.py  health.py  models.py
services/api/app/core/: config.py
services/api/tests/: test_app.py  test_errors.py  test_health.py  test_models.py
